# my_coding_agent

./: .cursorrules  .editorconfig  .env_example  .gitignore  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  =0.6.0  =1.3.0  =2.5.0  CHANGELOG.md  LICENSE  LINTING_GUIDE.md  Makefile  README.md  demo_test_fixes.py  mcp.json  pyproject.toml  pytest.ini  requirements.txt  test_color_scheme.py  test_gui_color_scheme.py  test_live_app.py  test_live_app_old.py
.cursor/rules/: create-prd.mdc  generate-tasks.mdc  process-task-list.mdc  project-organization.mdc
.github/workflows/: ci.yml  docs.yml
docs/: CONTRIBUTING.md  Makefile  README.md  agent_instructions.md  notes.md
docs/source/: authors.rst  changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  license.rst  plugins.rst  quickstart.rst
examples/: README.md  __init__.py  chromadb_migration_example.py  debug_line_numbers_structure.py  demo_ai_chat.py  demo_ai_processing_indicators.py  demo_chat_dark_theme.py  demo_file_tree_signals.py  demo_simplified_chat.py  demo_syntax_test.py  manual_test_ai_integration.py  manual_test_message_display.py  mcp_usage_example.py  test_agent_integration.py  test_ai_integration.py  test_chat_response.py  test_debug_gui_chat.py  test_gui_chat.py  test_line_numbers_display_demo.py  test_line_numbers_immediate_demo.py  test_live_agent_chat.py  test_live_syntax_highlighting.py  test_manual_signal.py  test_message_display.py  test_message_height_consistency.py  test_simple_chatbot.py  test_simple_signal.py  test_streaming_agent.py  test_streaming_chat.py  test_streaming_debug.py  test_streaming_integration.py  test_user_message_width.py
examples/basic_usage/: ai_service_config_example.py
libs/agent_arch/: README.md  pyproject.toml
libs/agent_arch/src/agent_arch/: __init__.py  cli.py  orchestrator.py  types.py
libs/agent_arch/src/agent_arch/agents/: __init__.py  base_agent.py  chatbot_agent.py
libs/code_viewer/: README.md  pyproject.toml
libs/code_viewer/src/code_viewer/: __init__.py  py.typed
libs/code_viewer/src/code_viewer/core/: __init__.py  main_window.py  theme_manager.py
libs/code_viewer/src/code_viewer/core/agent_integration/: __init__.py  agent_bridge.py
libs/code_viewer/src/code_viewer/gui/: __init__.py  chat_widget.py  chat_widget_v2.py
libs/code_viewer/tests/unit/: test_agent_bridge.py  test_agent_integration_setup.py  test_chat_widget.py  test_code_viewer.py  test_file_tree.py  test_theme_manager.py
sample_files/subfolder2/: demo.js
src/: __init__.py  code_editor.py  color_scheme_config.py  color_schemes.py  color_visibility_report.py  file_explorer.py  folder_dialog.py  gui.py  main.py  nord_visibility_report.json  syntax_manager.py  token_mapper.py
src/my_coding_agent/: __init__.py  __main__.py  _version.py  py.typed
tasks/: README.md  code_duplication_audit.md  prd-ai-agent-god-object-refactoring.md  prd-ai-service-adapter.md  prd-mcp-client-interface-simplification.md  prd-simple-code-viewer-redesign.md  prd-syntax-highlighting.md  task_line_numbers_fix_summary.md  tasks-ai_agent_enhancements_prd.md  tasks-prd-agent-architecture-integration.md  tasks-prd-ai-agent-god-object-refactoring.md  tasks-prd-ai-agent-orchestrator.md  tasks-prd-ai-service-adapter.md  tasks-prd-file-explorer-gui.md  tasks-prd-mcp-client-interface-simplification.md  tasks-prd-simple-code-viewer-redesign.md  tasks-syntax-highlighting.md
tasks/archived/: ai_agent_enhancements_prd.md  tasks-ai_agent_enhancements_prd.md  tasks-prd-ai-agent-god-object-refactoring.md
tasks/completed/: prd-file-explorer-gui.md  tasks-prd-file-explorer-gui.md
test_folders/subfolder1/: example.py
tests/: __init__.py  conftest.py  test_ai_agent.py  test_ai_agent_error_handling.py  test_ai_agent_filesystem_tools.py  test_ai_agent_mcp_integration.py  test_ai_agent_workspace_operations.py  test_application_entry.py  test_assets_structure.py  test_chat_message_model.py  test_chat_widget.py  test_code_editor.py  test_code_viewer.py  test_codeview_integration.py  test_color_scheme.py  test_color_scheme_configuration.py  test_color_scheme_integration.py  test_color_schemes.py  test_color_visibility_verification.py  test_dark_theme_compatibility.py  test_dependencies.py  test_dialog_behavior.py  test_error_handling_edge_cases.py  test_error_handling_fallback.py  test_file_explorer.py  test_file_loading_error_handling.py  test_file_size_limits.py  test_file_tree.py  test_fixes_verification.py  test_graceful_fallback.py  test_gui.py  test_gui_closing_recursion_fix.py  test_gui_color_scheme.py  test_gui_fixtures.py  test_gui_improvements.py  test_gui_line_numbers_integration.py  test_initial_setup.py  test_integration.py  test_large_file_performance.py  test_line_numbers_auto_display.py  (+34 more)
tests/fixtures/: __init__.py  gui_fixtures.py
tests/integration/: __init__.py  conftest.py  test_integration.py
tests/unit/: __init__.py  conftest.py  test_ai_agent.py  test_ai_agent_code_duplication.py  test_ai_agent_error_handling.py  test_ai_agent_filesystem_tools.py  test_ai_agent_foundation_services.py  test_ai_agent_mcp_integration.py  test_ai_agent_project_history_integration.py  test_ai_agent_streaming_integration.py  test_ai_agent_workspace_integration.py  test_ai_agent_workspace_operations.py  test_ai_messaging_service.py  (+65 more)
tools/: README.md  check_all_linting.py  debug_chat_widget.py  debug_file_tree_signals.py  debug_issues.py  debug_line_numbers_structure.py  debug_mcp_connection.py  debug_menu.py  debug_recursion.py  debug_shortcuts.py  debug_styling.py  demo_message_styling.py  fix_color_scheme_tests.py  fix_mypy_errors.py  fix_qt_test_markers.py  fix_type_annotations.py  logic_verification_test.py  minimal_line_numbers_test.py  quick_headless_test.py  run_tests_smart.py  safe_line_numbers_test.py  simple_line_numbers_test.py  simple_visual_test.py  test_line_numbers_scrolling.py  test_mcp_context_manager.py  test_memory_integration.py  test_modified_event_binding.py  test_scroll_event_bindings.py  test_streaming_debug.py  type_fixes_summary.md  verify_line_numbers_fix.py
(+69 files in other folders)
